# carrot-rcc

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Camunda.ts  Dockerfile  Makefile  Makefile.release  README.md  Vagrantfile  carrot_rcc.py  carrot_rcc.ts  carrot_rcc_lib.test.ts  carrot_rcc_lib.ts  conda.yaml  default.nix  docker-compose.yml  flake.nix  jest.config.js  package-lock.json  package.json  pyproject.toml  release-container.mk  release.nix  rollup.config.js  shell.nix  tsconfig.json
.github/workflows/: test.yml  vagrant.yml
@types/neodoc/: index.d.ts
camunda/: Dockerfile  web.xml
camunda/cockpit/: config.js
camunda/deployment/: camunda-reset.bpmn  fleamarket-download.html  fleamarket-pricing.dmn  fleamarket-review.bpmn  fleamarket-review.html  fleamarket-submission.bpmn  fleamarket-submit.html  review.html  xkcd-fetch-review.bpmn  xkcd-review.html  xkcd-search.bpmn
fleamarket-bot/: Image.py  YOLO.py  conda.yaml  robot.yaml  tasks.robot
nix/: default.nix  micromamba.patch  node-dev-composition.nix  node-dev-packages.nix  node-run-composition.nix  node-run-packages.nix  sources.json
vagrant/: Makefile  configuration-gce.nix  configuration-hyperv.nix  configuration-hyperv.xml  configuration-libvirt.nix  configuration-virtualbox.nix  configuration.nix  default.nix
vagrant/cachix/: datakurre.nix  default.nix
vagrant/files/: camunda-modeler.desktop  camunda.desktop  chromium-browser.desktop  journal.desktop  keyboard.desktop  mailhog.desktop  mockoon.desktop  vault.desktop  (+2 more)
xkcd-bot/: conda.yaml  robot.yaml  tasks.robot
(+34 files in other folders)
