[tool.poetry]
name = "carrot-rcc"
version = "0.2.0"
description = "Camunda external task Robot Framework RCC client"
homepage = "https://github.com/datakurre/carrot-rcc"
authors = ["Asko Soukka <asko.soukka@iki.fi>"]
license = "MIT"
packages = [
    { include = "carrot_rcc.py" },
]
include = [ "CHANGELOG.md", "carrot-rcc" ]
readme = "README.md"

[tool.poetry.scripts]
carrot-rcc= "carrot_rcc:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
